fix not showing all included template files.

--- a/css/style.css
+++ b/css/style.css
@@ -8,25 +8,37 @@
 */
 #wpadminbar .show-template-name, #wpadminbar .hover .show-template-name {
   font-family: monospace;
-  text-shadow: none; }
+  text-shadow: none;
+}
 #wpadminbar #wp-admin-bar-included_files_path .ab-item {
   height: auto;
-  padding-bottom: 1rem; }
-  #wpadminbar #wp-admin-bar-included_files_path .ab-item div {
-    font-family: monospace;
-    text-shadow: none;
-    color: #fff; }
+  padding-bottom: 1rem;
+}
+#wpadminbar #wp-admin-bar-included_files_path .ab-item div {
+  font-family: monospace;
+  text-shadow: none;
+  color: #fff;
+}
 #wpadminbar .hover .show-template-name:hover {
-  color: #2ea2cc; }
+  color: #2ea2cc;
+}
 #wpadminbar #wp-admin-bar-included_files_path .ab-item #included-files-list li {
-  line-height: 1.5; }
-  #wpadminbar #wp-admin-bar-included_files_path .ab-item #included-files-list li:hover {
-    color: #2ea2cc; }
+  line-height: 1.5;
+}
+#wpadminbar #wp-admin-bar-included_files_path .ab-item #included-files-list li:hover {
+  color: #2ea2cc;
+}
 #wpadminbar #included-files-list {
-  margin-left: 20px; }
+  margin-left: 20px;
+}
 
 #wp-admin-bar-show_template_file_name_on_top-default {
   max-height: 90vh;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
+
+#included-files-fie-on-wp-footer {
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
